tidying up with folders

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Almond recipes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -15,7 +15,7 @@
         <ul class="navbar">
             <li class="navelement"><a>Almond app</a></li>
             <li class="navlink"><a href="#">Home</a></li>
-            <li class="navlink" id="user"><a href="#"><img src="mockupPhoto/user.jpg" alt="profilepicture"
+            <li class="navlink" id="user"><a href="#"><img src="../mockupPhoto/user.jpg" alt="profilepicture"
                         style="max-width: 3em; max-height: 3em; border-radius: 50%;"></a></li>
         </ul>
     </nav>
