--- a/frontend/html/recipes.html
+++ b/frontend/html/recipes.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
+    <nav>
+        <!-- Navbar html -->
+        <ul class="navbar">
+            <li class="navelement"><a id="nav_a">Almond app</a></li>
+            <li class="navlink"><a id="nav_a" href="#">Home</a></li>
+            <li class="navlink" id="user"><a id="nav_a" href="#" onclick="openLogInForm()"><img src="../mockupPhoto/user.jpg" alt="profilepicture"
+                        style="max-width: 3em; max-height: 3em; border-radius: 50%;"></a></li>
+        </ul>
+    </nav>
     
 </body>
 </html>
