--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -66,9 +66,11 @@
         </form>
     </div>
     <!-- Div for all the recipecards -->
+    <div class="container">
         <main class="gridcontainer">
             <script src="../js/js.js"></script>
         </main>
+    </div>
 </body>
 <script>
     function openLogInForm() {
