main page divs are basically done now

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -66,11 +66,14 @@
         </form>
     </div>
     <!-- Div for all the recipecards -->
-    <div class="container">
-        <main class="gridcontainer">
-            <script src="../js/js.js"></script>
-        </main>
+    <div class="containercontainer">
+        <div class="container">
+            <main class="gridcontainer">
+                <script src="../js/js.js"></script>
+            </main>
+        </div>
     </div>
+
 </body>
 <script>
     function openLogInForm() {
