finished recipe card layout

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -66,9 +66,9 @@
         </form>
     </div>
     <!-- Div for all the recipecards -->
-    <div class="containercontainer">
+    <div class="maincontainer">
         <div class="container">
-            <main class="gridcontainer">
+            <main class="recipes">
                 <script src="../js/js.js"></script>
             </main>
         </div>
