--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -22,40 +22,6 @@
         </ul>
     </nav>
 
-    <!-- Loging form -->
-    <div class="login" id="loginform">
-        <a id="close" href="#" type="close" onclick="closeLogInForm()">&times;</a>
-        <form>
-            <h1>Log In</h1>
-            <div class="txt-field">
-                <input type="text" required>
-                <label>Username</label>
-            </div>
-            <div class="txt-field">
-                <input type="text" required>
-                <label>Password</label>
-            </div>
-            <input type="submit" value="Login">
-            <div class="signuplink"><a href="#" onclick="openSignUpForm()">Sign up</a>
-            </div>
-    </div>
-    </form>
-    <!-- SignUp form -->
-    <div class="signup" id="signupform">
-        <a id="close" href="#" type="close" onclick="closeSignUpForm()">&times;</a>
-        <form>
-            <h1>Sign Up</h1>
-            <div class="txt-field">
-                <input type="text" required>
-                <label>Username</label>
-            </div>
-            <div class="txt-field">
-                <input type="text" required>
-                <label>Password</label>
-            </div>
-            <input type="submit" value="Submit">
-    </div>
-    </form>
 
     <!-- Div for centering the form -->
     <div class="searchdiv">
@@ -73,6 +39,41 @@
             </main>
         </div>
     </div>
+    
+ 
+    <!-- <div class="login" id="loginform">
+        <a id="close" href="#" type="close" onclick="closeLogInForm()">&times;</a>
+        <form>
+            <h1>Log In</h1>
+            <div class="txt-field">
+                <input type="text" required>
+                <label>Username</label>
+            </div>
+            <div class="txt-field">
+                <input type="text" required>
+                <label>Password</label>
+            </div>
+            <input type="submit" value="Login">
+            <div class="signuplink"><a href="#" onclick="openSignUpForm()">Sign up</a>
+            </div>
+    </div>
+    </form>
+    
+    <div class="signup" id="signupform">
+        <a id="close" href="#" type="close" onclick="closeSignUpForm()">&times;</a>
+        <form>
+            <h1>Sign Up</h1>
+            <div class="txt-field">
+                <input type="text" required>
+                <label>Username</label>
+            </div>
+            <div class="txt-field">
+                <input type="text" required>
+                <label>Password</label>
+            </div>
+            <input type="submit" value="Submit">
+    </div>
+    </form> -->
 
 </body>
 <script>
