--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -14,9 +14,8 @@
     <nav>
         <!-- Navbar html -->
         <ul class="navbar">
-            <li class="navelement"><a id="nav_a">Almond app</a></li>
-            <li class="navlink"><a id="nav_a" href="#">Home</a></li>
-            <li class="navlink" id="user"><a id="nav_a" href="#" onclick="openLogInForm()"><img
+            <li class="navelement"><a id="nav_a" href="#">Almond app</a></li>
+            <li class="navlink" id="user"><a id="nav_a" href="#"><img
                         src="../mockupPhoto/user.jpg" alt="profilepicture"
                         style="max-width: 3em; max-height: 3em; border-radius: 50%;"></a></li>
         </ul>
