own page for signup

--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <title>Document</title>
 </head>
 <body>
-
-
-   <div class="login" id="loginform">
+    <div class="signup" id="signupform">
         <a id="close" href="#" type="close">&times;</a>
         <form>
-            <h1>Log In</h1>
+            <h1>Sign Up</h1>
             <div class="txt-field">
                 <input type="text" required>
                 <label>Username</label>
@@ -22,11 +20,8 @@
                 <input type="text" required>
                 <label>Password</label>
             </div>
-            <input type="submit" value="Login">
-            <div class="signuplink"><a href="signup.html">Sign up</a>
-            </div>
+            <input type="submit" value="Submit">
         </form>
     </div>
-    
 </body>
 </html>
