--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -14,10 +14,12 @@
     <nav>
         <!-- Navbar html -->
         <ul class="navbar">
-            <li class="navelement"><a id="nav_a" href="#">Almond app</a></li>
-            <li class="navlink" id="user"><a id="nav_a" href="#"><img
-                        src="../mockupPhoto/user.jpg" alt="profilepicture"
-                        style="max-width: 3em; max-height: 3em; border-radius: 50%;"></a></li>
+            <li class="navelement"><a id="nav_a">Almond app</a></li>
+            <li class="navlink" id="user">
+                <a id="nav_a" href="#">
+                    <img src="../mockupPhoto/user.jpg" alt="profilepicture"
+                    style="max-width: 3em; max-height: 3em; border-radius: 50%;"></a>
+            </li>
         </ul>
     </nav>
 
@@ -39,29 +41,6 @@
         </div>
     </div>
     
- 
-
-
 </body>
-<script>
-    function openLogInForm() {
-        document.getElementById("loginform").style.display = "block";
-    }
-
-    function closeLogInForm() {
-        document.getElementById("loginform").style.display = "none";
-    }
-
-    function openSignUpForm() {
-        document.getElementById("loginform").style.display = "none";
-        document.getElementById("signupform").style.display = "block";
-    }
-
-    function closeSignUpForm() {
-        document.getElementById("signupform").style.display = "none";
-    }
-
-
-</script>
 
 </html>
