--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -14,7 +14,7 @@
     <nav>
         <!-- Navbar html -->
         <ul class="navbar">
-            <li class="navelement"><a id="nav_a" href="index.html">Almond app</a></li>
+            <li class="navelement"><a id="nav_a" href="home.html">Almond app</a></li>
             <li class="navlink" id="user">
                 <a id="nav_a" href="#">
                     <img src="../mockupPhoto/user.jpg" alt="profilepicture"
@@ -27,7 +27,7 @@
     <!-- Div for centering the form -->
     <div class="searchdiv">
         <!-- Search form for finding recipes -->
-        <form class="search" action=>
+        <form class="search">
             <input id="search" type="text" placeholder="Look for a recipe...">
             <button id="button" type="submit"><i class="fa fa-search"></i></button>
         </form>
