--- a/frontend/html/editrecipe.html
+++ b/frontend/html/editrecipe.html
@@ -11,7 +11,7 @@
     <nav>
         <!-- Navbar html -->
         <ul class="navbar">
-            <li class="navelement"><a id="nav_a" href="index.html">Almond app</a></li>
+            <li class="navelement"><a id="nav_a" href="home.html">Almond app</a></li>
             <li class="navlink" id="user"><a id="nav_a" href="#"><img src="../mockupPhoto/user.jpg" alt="profilepicture"
                         style="max-width: 3em; max-height: 3em; border-radius: 50%;"></a></li>
         </ul>
