--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -8,20 +8,36 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="signup" id="signupform">
-        <a id="close" href="#" type="close">&times;</a>
-        <form>
-            <h1>Sign Up</h1>
-            <div class="txt-field">
-                <input type="text" required>
-                <label>Username</label>
-            </div>
-            <div class="txt-field">
-                <input type="text" required>
-                <label>Password</label>
-            </div>
-            <input type="submit" value="Submit">
-        </form>
+    <nav>
+        <!-- Navbar html -->
+        <ul class="navbar">
+            <li class="navelement"><a id="nav_a" href="home.html">Almond app</a></li>
+            <li class="navlink" id="user">
+                <a id="nav_a" href="#">
+                    <img src="../mockupPhoto/user.jpg" alt="profilepicture"
+                        style="max-width: 3em; max-height: 3em; border-radius: 50%;"></a>
+            </li>
+        </ul>
+    </nav>
+    <div class="login_body">
+        <div class="logincenter">
+            <h1>Signup</h1>
+            <form method="post" class="login_form">
+                <div class="txt_field">
+                    <label>Username</label>
+                    <input type="text" required>
+                    
+                </div>
+                <div class="txt_field">
+                    <label>Password</label>
+                    <input type="Password" required>
+                </div>
+                <div class="pwd">
+                    <input type="submit" value="Login">
+
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 </html>
