Frontend now gets information from database

--- a/frontend/html/recipes.html
+++ b/frontend/html/recipes.html
@@ -20,7 +20,7 @@
         </ul>
     </nav>
     <div class="container">
-        <h1>Recipe name</h1>
+        <h1 id="name">Recipe name</h1>
     </div>
     <div class="container">
         <div class="recipeimage">
@@ -29,7 +29,7 @@
     </div>
     <div class="container">
         <div class="recipecontainer">
-            <div class="ingredients">
+            <div id="ingredients" class="ingredients">
                 1ps(4 kpl/680 g)
                 Pirkka Parhaat pizzataikinaa (pakaste)
                 1prk(150 g)
@@ -53,7 +53,7 @@
                 ripaus
                 mustapippuria
             </div>
-            <div class="steps">
+            <div id="steps" class="steps">
                 <p>Ota pizzataikina sulamaan hyvissä ajoin pakkauksen ohjeen mukaan.
                     Yhdistä kaksi pizzataikinapalloa. Kauli taikinat jauhoja apuna käyttäen ohueksi levyksi.
                     Ota taikinalevystä isolla piparkakkumuotilla tähden muotoisia pizzoja. Nosta pizzat lastan avulla
@@ -79,5 +79,5 @@
         </div>
     </div>
 </body>
-
+<script src="../js/recipes.js"></script>
 </html>
