Recipe page css

--- a/frontend/html/editrecipe.html
+++ b/frontend/html/editrecipe.html
@@ -16,16 +16,15 @@
                         style="max-width: 3em; max-height: 3em; border-radius: 50%;"></a></li>
         </ul>
     </nav>
-    <div class="container">
-        <form class="recipeadd">
-            <label class="recipeaddlabel">Recipe photo</label>
-            <input type="file" name="file" id="file">
-            <label class="recipeaddlabel">ingredients</label>
-            <input type="text">
-            <label class="recipeaddlabel">Instructions</label>
-            <input type="text">
-            <button id="addrecipebutton" type="submit">Add recipe</button>
-        </form>
+    <div class="recipeadd_container">
+        <div class="recipe_add">
+            <form>
+                <input type="text" required>
+                <input type="text" required>
+                <input type="text" required>
+                
+            </form>
+        </div>
     </div>
 </body>
 </html>
