recipe add page started

--- a/frontend/html/addrecipe.html
+++ b/frontend/html/addrecipe.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
+
 <body>
     <nav>
         <!-- Navbar html -->
@@ -17,14 +19,20 @@
         </ul>
     </nav>
     <div class="recipeadd_container">
-        <div class="recipe_add">
-            <form>
-                <input type="text" required>
-                <input type="text" required>
-                <input type="text" required>
-                
-            </form>
-        </div>
+        <form class="recipe_add">
+            <div class="add_image">
+                <input type="file">
+            </div>
+            <div class="guidelines">
+                <div class="add_ingredients">
+                    <input>
+                </div>
+                <div class="add_steps"></div>
+            </div>
+            <div class="add_button"></div>
+        </form>
+
     </div>
 </body>
+
 </html>
