--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -1,3 +1,4 @@
+<!--Eetu Rouhiainen-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,7 +33,7 @@
                     <label>Password</label>
                     <input type="Password" required>
                 </div>
-                <div class="pwd">
+                <div class="loginbutton">
                     <input type="submit" value="Login">
 
                 </div>
