--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -1,3 +1,4 @@
+<!--Eetu Rouhiainen-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -34,7 +35,7 @@
                     <label>Password</label>
                     <input type="Password" required>
                 </div>
-                <div class="pwd">
+                <div class="loginbutton">
                     <input type="submit" value="Login">
 
                 </div>
