comment field to recipe page

--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -17,7 +17,7 @@
         <ul class="navbar">
             <li class="navelement"><a id="nav_a" href="home.html">Almond app</a></li>
             <li class="navlink" id="user">
-                <a id="nav_a" href="#">
+                <a id="nav_a" href="login.html">
                     <img src="../mockupPhoto/user.jpg" alt="profilepicture"
                     style="max-width: 3em; max-height: 3em; border-radius: 50%;"></a>
             </li>
