--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
-<body>
+<body class="login_body">
     <nav>
         <!-- Navbar html -->
         <ul class="navbar">
@@ -22,7 +22,7 @@
             </li>
         </ul>
     </nav>
-    <div class="login_body">
+    
         <div class="logincenter">
             <h1>Login</h1>
             <form method="post" class="login_form">
@@ -44,7 +44,7 @@
                 </div>
             </form>
         </div>
-    </div>
+    
 </body>
 
 </html>
