--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -1,14 +1,16 @@
 <!--Eetu Rouhiainen-->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Document</title>
+    <title>Signup</title>
 </head>
-<body>
+
+<body class="login_body">
     <nav>
         <!-- Navbar html -->
         <ul class="navbar">
@@ -20,25 +22,26 @@
             </li>
         </ul>
     </nav>
-    <div class="login_body">
-        <div class="logincenter">
-            <h1>Signup</h1>
-            <form method="post" class="login_form">
-                <div class="txt_field">
-                    <label>Username</label>
-                    <input type="text" required>
-                    
-                </div>
-                <div class="txt_field">
-                    <label>Password</label>
-                    <input type="Password" required>
-                </div>
-                <div class="loginbutton">
-                    <input type="submit" value="Login">
 
-                </div>
-            </form>
-        </div>
+    <div class="logincenter">
+        <h1>Signup</h1>
+        <form method="post" class="login_form">
+            <div class="txt_field">
+                <label>Username</label>
+                <input type="text" required>
+
+            </div>
+            <div class="txt_field">
+                <label>Password</label>
+                <input type="Password" required>
+            </div>
+            <div class="loginbutton">
+                <input type="submit" value="Proceed">
+
+            </div>
+        </form>
     </div>
+
 </body>
+
 </html>
