added comments to frontend + changes to recipe

--- a/frontend/html/recipes.html
+++ b/frontend/html/recipes.html
@@ -71,11 +71,8 @@
         </div>
     </div>
     <div class="container">
-        <div class="comments">
-            <div class="comment">
-                <p>Pertti</p>
-                <p>HIENO RESEPTI LOL XD :DD</p>
-            </div>
+        <div id="comments" class="comments">
+
         </div>
     </div>
 </body>
