like button to recipe page

--- a/frontend/html/addrecipe.html
+++ b/frontend/html/addrecipe.html
@@ -22,7 +22,7 @@
     </nav>
     <div class="recipeadd_container">
         <form class="recipe_add">
-            <div class="add_image">
+            <div  class="add_image">
                 <input class ="hide "type="file" accept="image/*" onchange="loadFile(event)">
                 <img id="output" />
                 <script>
@@ -37,10 +37,12 @@
             </div>
             <div class="guidelines">
                 <div class="add_ingredients">
+                    <button>Add field</button>
                     <h2>Add ingredients</h2>
                     <input type="text">
                 </div>
                 <div class="add_steps">
+                    <button>Add field</button>
                     <h2>Add steps</h2>
                     <input>
                 </div>
