--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -37,7 +37,7 @@
     <div class="maincontainer">
         <div class="container">
             <main class="recipes">
-                <script src="../js/js.js"></script>
+                <script src="../js/mockup.js"></script>
             </main>
         </div>
     </div>
