--- a/frontend/html/recipes.html
+++ b/frontend/html/recipes.html
@@ -72,6 +72,11 @@
         </div>
     </div>
     <div class="container">
+        <form class="add_comment">
+            <textarea rows = "5" cols = "60">
+             </textarea>
+            <button id="add_comment_button">Add comment</button>
+        </form>
         <div id="comments" class="comments">
 
         </div>
