--- a/frontend/html/recipes.html
+++ b/frontend/html/recipes.html
@@ -26,6 +26,9 @@
     <div class="container">
         <div class="recipeimage">
             <img src="../mockupPhoto/glögg.png">
+            <div class="likebutton_container">
+                <button onclick="" class="likebutton">Like</button>
+            </div>
         </div>
     </div>
     <div class="container">
