--- a/frontend/html/recipes.html
+++ b/frontend/html/recipes.html
@@ -26,7 +26,7 @@
         <div class="recipeimage">
             <img src="../mockupPhoto/glögg.png">
             <div class="likebutton_container">
-                <button class="likebutton">Like</button>
+                <button class="likebutton" id="likebutton">Like</button>
             </div>
             
         </div>
