log in toimii jotenkin

--- a/frontend/html/singin.html
+++ b/frontend/html/singin.html
@@ -28,15 +28,15 @@
             <form method="post" class="login_form">
                 <div class="txt_field">
                     <label>Username</label>
-                    <input type="text" required>
+                    <input class="light-border" type="text"required name ="username">
                     
                 </div>
                 <div class="txt_field">
                     <label>Password</label>
-                    <input type="Password" required>
+                    <input class="light-border" type="text"required  name = "password">
                 </div>
                 <div class="loginbutton">
-                    <input type="submit" value="Login">
+                    <button type="submit">login</button>
 
                 </div>
                 <div class="signuplink">
@@ -45,6 +45,8 @@
             </form>
         </div>
     </div>
+    <script src="../js/serialize.js"></script>
+    <script src="../js/singin.js"></script>
 </body>
 
 </html>
