--- a/frontend/html/singup.html
+++ b/frontend/html/singup.html
@@ -18,7 +18,7 @@
             <div class="txt-field">
                 <input class="light-border" type="text"required  name = "password" placeholder="Password">
             </div>
-            <button type="submit">login</button>
+            <button type="submit">signup</button>
         </div>
     </form>
     <script src="../js/serialize.js"></script>
