--- a/frontend/html/recipes.html
+++ b/frontend/html/recipes.html
@@ -27,7 +27,7 @@
         <div class="recipeimage">
             <img src="../mockupPhoto/glögg.png">
             <div class="likebutton_container">
-                <button onclick="" class="likebutton">Like</button>
+                <button id="likebutton">Submit</button>
             </div>
         </div>
     </div>
