--- a/frontend/html/addrecipe.html
+++ b/frontend/html/addrecipe.html
@@ -21,7 +21,8 @@
         </ul>
     </nav>
     <div class="recipeadd_container">
-
+        <h1>recipe name</h1>
+        <input>
         <form class="recipe_add" id="recipe_add" method="post">
             <div class="image_container">
                 <div class="add_image">
