--- a/frontend/html/singin.html
+++ b/frontend/html/singin.html
@@ -25,7 +25,7 @@
     <div class="login_body">
         <div class="logincenter">
             <h1>Login</h1>
-            <form class="login_form">
+            <form class="login_form" id="login_form">
                 <div class="txt_field">
                     <label>Username</label>
                     <input class="light-border" type="text"required name ="username">
