profile base done (took 19 minutes not days :DDDD)

--- a/frontend/html/editprofile.html
+++ b/frontend/html/editprofile.html
@@ -12,10 +12,21 @@
         <!-- Navbar html -->
         <ul class="navbar">
             <li class="navelement"><a id="nav_a" href="home.html">Almond app</a></li>
-            <li class="navlink" id="user"><a id="nav_a" href="#" onclick="openLogInForm()"><img src="../mockupPhoto/user.jpg" alt="profilepicture"
+            <li class="navlink" id="user"><a id="nav_a" href="#"><img src="../mockupPhoto/user.jpg" alt="profilepicture"
                         style="max-width: 3em; max-height: 3em; border-radius: 50%;"></a></li>
         </ul>
     </nav>
-    
+   <div class="profile_container">
+    <form class="addprofile">
+        <div class="userinfo">
+            <h2>Name</h2>
+            <input type="name">
+        </div>
+        <div>
+        <input type="file">
+    </div>
+        
+    </form>
+   </div>
 </body>
 </html>
