--- a/frontend/html/profile.html
+++ b/frontend/html/profile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,42 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
+
 <body>
     <nav>
         <!-- Navbar html -->
         <ul class="navbar">
             <li class="navelement"><a id="nav_a">Almond app</a></li>
             <li class="navlink"><a id="nav_a" href="#">Home</a></li>
-            <li class="navlink" id="user"><a id="nav_a" href="#" onclick="openLogInForm()"><img src="../mockupPhoto/user.jpg" alt="profilepicture"
+            <li class="navlink" id="user"><a id="nav_a" href="#" onclick="openLogInForm()"><img
+                        src="../mockupPhoto/user.jpg" alt="profilepicture"
                         style="max-width: 3em; max-height: 3em; border-radius: 50%;"></a></li>
         </ul>
     </nav>
-    
+    <div class="profile_container">
+        <div class="profile_info">
+            <h1>Username</h1>
+            <div class="imageholder">
+                <img src="../mockupPhoto/user.jpg" class="userphoto">
+            </div>
+            <div class="userinfo">
+               <div class="info">
+                <h1>Own recipes</h1>
+                <article id="ownrecipes">
+                    <!--Javascript adds recipes here-->
+                </article>
+               </div>
+               <div class="info">
+                <h1>Liked recipes</h1>
+                <article id="likedreipe">
+                    <!--Javascript adds recipes here-->
+                </article>
+               </div>
+            </div>
+            
+        </div>
+    </div>
+
 </body>
+
 </html>
