logged out page

--- a/frontend/html/profile.html
+++ b/frontend/html/profile.html
@@ -13,9 +13,8 @@
     <nav>
         <!-- Navbar html -->
         <ul class="navbar">
-            <li class="navelement"><a id="nav_a">Almond app</a></li>
-            <li class="navlink"><a id="nav_a" href="#">Home</a></li>
-            <li class="navlink" id="user"><a id="nav_a" href="#" onclick="openLogInForm()"><img
+            <li class="navelement"><a id="nav_a" href="home.html">Almond app</a></li>
+            <li class="navlink" id="user"><a id="nav_a" href="#"><img
                         src="../mockupPhoto/user.jpg" alt="profilepicture"
                         style="max-width: 3em; max-height: 3em; border-radius: 50%;"></a></li>
         </ul>
@@ -42,8 +41,9 @@
             </div>
             
         </div>
+        <div class="logout"><button>Sign out</button></div>
     </div>
-
+    
 </body>
 
 </html>
