--- a/frontend/html/recipes.html
+++ b/frontend/html/recipes.html
@@ -28,56 +28,62 @@
             <div class="likebutton_container">
                 <button class="likebutton" id="likebutton">Like</button>
             </div>
-            
-        </div>
-    </div>
-    <div class="container">
-        <div class="recipecontainer">
-            <div id="ingredients" class="ingredients">
-                1ps(4 kpl/680 g)
-                Pirkka Parhaat pizzataikinaa (pakaste)
-                1prk(150 g)
-                Pirkka crème fraîchea (ranskankerma, 18%)
-                2dl(n. 70 g)
-                Pirkka Parhaat parmesaania raastettuna
-                1pkt(200 g)
-                Pirkka Parhaat uunipaahdettua kinkkulastua
-                tai
-                1(180 g)
-                päärynä
-                Basilikaöljy
-                1dl
-                basilikaa hienonnettuna
-                1
-                valkosipulinkynsi hienonnettuna
-                n. 2rkl
-                oliiviöljyä
-                ripaus
-                suolaa
-                ripaus
-                mustapippuria
-            </div>
-            <div id="steps" class="steps">
-                <p>Ota pizzataikina sulamaan hyvissä ajoin pakkauksen ohjeen mukaan.
-                    Yhdistä kaksi pizzataikinapalloa. Kauli taikinat jauhoja apuna käyttäen ohueksi levyksi.
-                    Ota taikinalevystä isolla piparkakkumuotilla tähden muotoisia pizzoja. Nosta pizzat lastan avulla
-                    pellille leivinpaperin päälle. Voit tarvittaessa vielä käsin hiukan muotoilla tähtiä pellillä.
-                    Yhdistä ylijäänyt taikina loppuihin pizzataikinapalloihin ja muotoile loppu taikina samoin. Pieniä
-                    tähtipizzoja tulee kaksi pellillistä.
-                    Sekoita ranskankerma ja puolet parmesaaniraasteesta (1 dl) kulhossa. Levitä seos pizzoille. Kuori ja
-                    leikkaa päärynä ohuiksi pieniksi paloiksi. Asettele valintasi mukaan kinkkulastut tai päärynät
-                    pizzoille.
-                    Paista pizzoja 225-asteisessa uunissa 10–12 minuuttia yksi pelti kerrallaan.
-                    Sekoita basilikan joukkoon valkosipuli, oliiviöljy ja suola. Lusikoi basilikaöljyä ja ripottele
-                    loppu parmesaaniraaste pizzoille juuri ennen tarjoilua. Rouhi lopuksi pinnalle vielä pippuria.</p>
-            </div>
 
         </div>
     </div>
     <div class="container">
+        <div class="recipecontainer">
+            <div class="resizer">
+                <div id="ingredients" class="ingredients">
+                    1ps(4 kpl/680 g)<br>
+                    Pirkka Parhaat pizzataikinaa (pakaste)
+                    1prk(150 g)<br>
+                    Pirkka crème fraîchea (ranskankerma, 18%)
+                    2dl(n. 70 g)<br>
+                    Pirkka Parhaat parmesaania raastettuna
+                    1pkt(200 g)<br>
+                    Pirkka Parhaat uunipaahdettua kinkkulastua
+                    tai
+                    1(180 g)<br>
+                    päärynä<br>
+                    Basilikaöljy
+                    1dl<br>
+                    basilikaa hienonnettuna
+                    1<br>
+                    valkosipulinkynsi hienonnettuna
+                    n. 2rkl<br>
+                    oliiviöljyä<br>
+                    ripaus<br>
+                    suolaa<br>
+                    ripaus<br>
+                    mustapippuria
+                </div>
+                <div id="steps" class="steps">
+                    <p>Ota pizzataikina sulamaan hyvissä ajoin pakkauksen ohjeen mukaan.
+                        Yhdistä kaksi pizzataikinapalloa. Kauli taikinat jauhoja apuna käyttäen ohueksi levyksi.
+                        Ota taikinalevystä isolla piparkakkumuotilla tähden muotoisia pizzoja. Nosta pizzat lastan
+                        avulla<br>
+                        pellille leivinpaperin päälle. Voit tarvittaessa vielä käsin hiukan muotoilla tähtiä pellillä.
+                        Yhdistä ylijäänyt taikina loppuihin pizzataikinapalloihin ja muotoile loppu taikina samoin.<br>
+                        Pieniä
+                        tähtipizzoja tulee kaksi pellillistä.<br>
+                        Sekoita ranskankerma ja puolet parmesaaniraasteesta (1 dl) kulhossa. Levitä seos pizzoille.
+                        Kuori ja
+                        leikkaa päärynä ohuiksi pieniksi paloiksi. Asettele valintasi mukaan kinkkulastut tai päärynät
+                        pizzoille.<br>
+                        Paista pizzoja 225-asteisessa uunissa 10–12 minuuttia yksi pelti kerrallaan.
+                        Sekoita basilikan joukkoon valkosipuli, oliiviöljy ja suola. Lusikoi basilikaöljyä ja ripottele
+                        loppu parmesaaniraaste pizzoille juuri ennen tarjoilua.<br> Rouhi lopuksi pinnalle vielä pippuria.
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div class="comment_container">
         <div class="comments">
             <form class="add_comment">
-                <textarea rows = "5" cols = "60">
+                <textarea rows="10" cols="100">
                  </textarea>
                 <button id="add_comment_button">Add comment</button>
             </form>
@@ -89,4 +95,5 @@
     </div>
 </body>
 <script src="../js/recipes.js"></script>
+
 </html>
