recipe page almost done

--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -15,7 +15,7 @@
     <nav>
         <!-- Navbar html -->
         <ul class="navbar">
-            <li class="navelement"><a id="nav_a" href="home.html">Almond app</a></li>
+            <li class="navelement"><a id="nav_a" href="home.html">Recipe GX</a></li>
             <li class="navlink" id="user">
                 <a id="nav_a" href="login.html">
                     <img src="../mockupPhoto/user.jpg" alt="profilepicture"
