--- a/frontend/html/recipes.html
+++ b/frontend/html/recipes.html
@@ -24,6 +24,9 @@
         <div class="image_container">
             <div id="image_container">
                 <img src="../mockupPhoto/glögg.png">
+                <div class="likebutton_container">
+                    <button class="likebutton" id="likebutton">Like</button>
+                </div>
             </div>
         </div>
         <div class="recipe_info">
