--- a/frontend/html/recipes.html
+++ b/frontend/html/recipes.html
@@ -20,7 +20,7 @@
         </ul>
     </nav>
     <div class="container">
-        <h1>LOL</h1>
+        <h1 id="name"></h1>
         <div class="image_container">
             <div id="image_container">
                 <img src="../mockupPhoto/glögg.png">
@@ -32,22 +32,22 @@
         <div class="recipe_info">
             <div class="ingredients">
                 <h2 class="recipe_headers">Ingredients</h2>
-                <p>Lorem Ipsum on yksinkertaisesti testausteksti, jota tulostus- ja ladontateollisuudet käyttävät. Lorem Ipsum on ollut teollisuuden normaali testausteksti jo 1500-luvulta asti, jolloin tuntematon tulostaja otti kaljuunan ja sekoitti sen tehdäkseen esimerkkikirjan. Se ei ole selvinnyt vain viittä vuosisataa, mutta myös loikan elektroniseen kirjoitukseen, jääden suurinpiirtein muuntamattomana. Se tuli kuuluisuuteen 1960-luvulla kun Letraset-paperiarkit, joissa oli Lorem Ipsum pätkiä, julkaistiin ja vielä myöhemmin tietokoneen julkistusohjelmissa, kuten Aldus PageMaker joissa oli versioita Lorem Ipsumista.</p>
+                <p id="ingredients">Lorem Ipsum on yksinkertaisesti testausteksti, jota tulostus- ja ladontateollisuudet käyttävät. Lorem Ipsum on ollut teollisuuden normaali testausteksti jo 1500-luvulta asti, jolloin tuntematon tulostaja otti kaljuunan ja sekoitti sen tehdäkseen esimerkkikirjan. Se ei ole selvinnyt vain viittä vuosisataa, mutta myös loikan elektroniseen kirjoitukseen, jääden suurinpiirtein muuntamattomana. Se tuli kuuluisuuteen 1960-luvulla kun Letraset-paperiarkit, joissa oli Lorem Ipsum pätkiä, julkaistiin ja vielä myöhemmin tietokoneen julkistusohjelmissa, kuten Aldus PageMaker joissa oli versioita Lorem Ipsumista.</p>
             </div>
             <div class="steps">
                 <h2 class="recipe_headers">Steps</h2>
-                <p>Lorem Ipsum on yksinkertaisesti testausteksti, jota tulpsum on yksinkertaisesti testausteksti, jota tupsum on yksinkertaisesti testausteksti, jota tupsum on yksinkertaisesti testausteksti, jota tupsum on yksinkertaisesti testausteksti, jota tuostus- ja ladontateollisuudet käyttävät. Lorem Ipsum on ollut teollisuuden normaali testausteksti jo 1500-luvulta asti, jolloin tuntematon tulostaja otti kaljuunan ja sekoitti sen tehdäkseen esimerkkikirjan. Se ei ole selvinnyt vain viittä vuosisataa, mutta myös loikan elektroniseen kirjoitukseen, jääden suurinpiirtein muuntamattomana. Se tuli kuuluisuuteen 1960-luvulla kun Letraset-paperiarkit, joissa oli Lorem Ipsum pätkiä, julkaistiin ja vielä myöhemmin tietokoneen julkistusohjelmissa, kuten Aldus PageMaker joissa oli versioita Lorem Ipsumista.</p>
+                <p id="steps">Lorem Ipsum on yksinkertaisesti testausteksti, jota tulpsum on yksinkertaisesti testausteksti, jota tupsum on yksinkertaisesti testausteksti, jota tupsum on yksinkertaisesti testausteksti, jota tupsum on yksinkertaisesti testausteksti, jota tuostus- ja ladontateollisuudet käyttävät. Lorem Ipsum on ollut teollisuuden normaali testausteksti jo 1500-luvulta asti, jolloin tuntematon tulostaja otti kaljuunan ja sekoitti sen tehdäkseen esimerkkikirjan. Se ei ole selvinnyt vain viittä vuosisataa, mutta myös loikan elektroniseen kirjoitukseen, jääden suurinpiirtein muuntamattomana. Se tuli kuuluisuuteen 1960-luvulla kun Letraset-paperiarkit, joissa oli Lorem Ipsum pätkiä, julkaistiin ja vielä myöhemmin tietokoneen julkistusohjelmissa, kuten Aldus PageMaker joissa oli versioita Lorem Ipsumista.</p>
             </div>
         </div>
-    </div>
-    <div class="container">
-        <form class="add_comment">
-            <textarea id="commentBox" rows = "5" cols = "60"></textarea>
+        <div></div>
+        <div id="commentfield" class="commentfield">
+            
+   
+        </div>
+        <form class="addcomment">
+            <textarea id="commentBox" class="comment_area"></textarea>
             <button id="add_comment_button">Add comment</button>
         </form>
-        <div id="comments" class="comments">
-
-        </div>
     </div>
     
    
