--- a/frontend/html/recipes.html
+++ b/frontend/html/recipes.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body class="recipebody">
@@ -25,7 +26,7 @@
             <div id="image_container">
                 <img src="../mockupPhoto/glögg.png">
                 <div class="likebutton_container">
-                    <button class="likebutton" id="likebutton">Like</button>
+                    <button class="likebutton" id="likebutton"><i id="heart" class="fa fa-heart-o" aria-hidden="true"></i></button>
                 </div>
             </div>
         </div>
