--- a/frontend/html/addrecipe.html
+++ b/frontend/html/addrecipe.html
@@ -22,11 +22,11 @@
                         style="max-width: 3em; max-height: 3em; border-radius: 50%;">
                     <div class="dropdown">
                         <div class="dropdown-content">
-                            <a href="login.html">Log In</a>
-                            <a href="profile.html">Profile</a>
-                            <a href="addrecipe.html">Make a recipe</a>
-                            <a href="loggedout.html">Log Out</a>
-
+                            <a href="login.html" id="dropdown_login">Log In</a>
+                            <a href="profile.html" id="dropdown_profile">Profile</a>
+                            <a href="addrecipe.html" id="dropdown_addrecipe">Make a recipe</a>
+                            <a href="loggedout.html" id="dropdown_logout" onclick="logout()">Log Out</a>
+    
                         </div>
                     </div>
                 </button>
@@ -40,7 +40,7 @@
         <form action="http://localhost:3000/recipe" class="recipe_add" id="recipe_add" method="post">
             <div class="image_container">
                 <div class="add_image">
-                    <input class="hide" type="file" name="recipe" accept="image/*">
+                    <input class="hide" type="file" name="recipe" accept="image/*" onchange="loadFile(event)">
                     <img id="output">
                 </div>
             </div>
@@ -71,10 +71,11 @@
             </div>
         </form>
     </div>
+
+</body>
  <script src="../js/serialize.js"></script>
 <script src="../js/addrecipe.js"></script>
-</body>
-
+<script src="../js/logout.js"></script>
 
 
 </html>
