--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -22,11 +22,11 @@
                         style="max-width: 3em; max-height: 3em; border-radius: 50%;">
                     <div class="dropdown">
                         <div class="dropdown-content">
-                            <a href="login.html" id="dropwdown_login">Log In</a>
-                            <a href="profile.html" id="dropwdown_profile">Profile</a>
-                            <a href="addrecipe.html" id="dropwdown_addrecipe">Make a recipe</a>
-                            <a href="loggedout.html" id="dropwdown_logout">Log Out</a>
-
+                            <a href="login.html" id="dropdown_login">Log In</a>
+                            <a href="profile.html" id="dropdown_profile">Profile</a>
+                            <a href="addrecipe.html" id="dropdown_addrecipe">Make a recipe</a>
+                            <a href="loggedout.html" id="dropdown_logout" onclick="logout()">Log Out</a>
+    
                         </div>
                     </div>
                 </button>
@@ -56,5 +56,5 @@
     </div>
 
 </body>
-
+<script src="../js/logout.js"></script>
 </html>
