--- a/frontend/html/profile.html
+++ b/frontend/html/profile.html
@@ -23,11 +23,11 @@ lines (41 sloc)  1.46 KB
                         style="max-width: 3em; max-height: 3em; border-radius: 50%;">
                     <div class="dropdown">
                         <div class="dropdown-content">
-                            <a href="login.html">Log In</a>
-                            <a href="profile.html">Profile</a>
-                            <a href="addrecipe.html">Make a recipe</a>
-                            <a href="loggedout.html">Log Out</a>
-
+                            <a href="login.html" id="dropdown_login">Log In</a>
+                            <a href="profile.html" id="dropdown_profile">Profile</a>
+                            <a href="addrecipe.html" id="dropdown_addrecipe">Make a recipe</a>
+                            <a href="loggedout.html" id="dropdown_logout" onclick="logout()">Log Out</a>
+    
                         </div>
                     </div>
                 </button>
@@ -65,4 +65,5 @@ lines (41 sloc)  1.46 KB
     <script src="../js/profilePage.js"></script>
     
 </body>
+<script src="../js/logout.js"></script>
 </html>
