--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -21,11 +21,11 @@
                         style="max-width: 3em; max-height: 3em; border-radius: 50%;">
                     <div class="dropdown">
                         <div class="dropdown-content">
-                            <a href="login.html">Log In</a>
-                            <a href="profile.html">Profile</a>
-                            <a href="addrecipe.html">Make a recipe</a>
-                            <a href="loggedout.html">Log Out</a>
-
+                            <a href="login.html" id="dropdown_login">Log In</a>
+                            <a href="profile.html" id="dropdown_profile">Profile</a>
+                            <a href="addrecipe.html" id="dropdown_addrecipe">Make a recipe</a>
+                            <a href="loggedout.html" id="dropdown_logout" onclick="logout()">Log Out</a>
+    
                         </div>
                     </div>
                 </button>
@@ -38,16 +38,16 @@
 
     <div class="logincenter">
         <h1>Signup</h1>
-        <form method="post" class="login_form">
+        <form method="post" class="login_form" id="signupForm">
 
             <div class="txt_field">
                 <label>Username</label>
-                <input type="text" required>
+                <input type="text" name="username"required>
 
             </div>
             <div class="txt_field">
                 <label>Password</label>
-                <input type="Password" required>
+                <input type="Password" name="password" required>
             </div>
             <div class="loginbutton">
                 <input type="submit" value="Proceed">
@@ -57,5 +57,7 @@
     </div>
 
 </body>
-
+<script src="../js/serialize.js"></script>
+<script src="../js/singup.js"></script>
+<script src="../js/logout.js"></script>
 </html>
